use unicode for accents

--- a/_includes/current_publications.html
+++ b/_includes/current_publications.html
@@ -21,7 +21,7 @@
     </p>
     <p>
         Green, S., Cooke, D. E. L., Dunn, M., Barwell, L., Purse, B., Chapman, D. S., 
-        Valatin, G., Schlenzig, A., Barbrook, J., Pettit, T., Price, C., P<&eacute>rez-Sierra, A., 
+        Valatin, G., Schlenzig, A., Barbrook, J., Pettit, T., Price, C., P&#xE9;rez-Sierra, A., 
         Frederickson-Matika, D., Pritchard, L., Thorpe, P., Cock, P. J., A., Randall, E., Keillor, 
         B., Marzano, M. (2021), <i>Forests</i>, Vol. 12, <a href="https://doi.org/10.3390/f12121617">https://doi.org/10.3390/f12121617</a>
     </p>
