correct typos in citations

--- a/_includes/current_publications.html
+++ b/_includes/current_publications.html
@@ -1,16 +1,16 @@
 <!--The most recent publications from the group-->
 <div class=publicationsmall>
     <p>
-        Pritchard, L., Parul, S., Reza, M., Tessa, P., Luiz, I., Harrington, B., Heath, L., Brown, 
-        T. C., Vinatzer, B. (2022) 'genomeRxiv : a microbial whole-genome database and diagnostic 
-        marker design resource for classification, identification, and data sharing', 
+        Pritchard, L., Sharma, P., S., Mazloom, R., Piece, T., Irber, L., Harrington, B., Heath, L., Brown, T., Vinatzer, B. 
+        (2022) 'genomeRxiv: a microbial whole-genome database and diagnostic marker design resource for 
+        classification, identification, and data sharing', 
         <i>Microbiology Society Annual Conference 2021</i> 
         <a href="https://doi.org/10.1099/acmi.ac2021.po0165">https://doi.org/10.1099/acmi.ac2021.po0165</a>
     </p>
     <p>
         Pritchard, L. Brown, T., Harrington, B., Heath, L., Pierce-Ward, N. T., Vinatzer, B. A. 
         (2022) 'Could a focus on the "why" of taxonomy help taxonomy better respond to the needs 
-        of science and society?', <i>Fronteries in Microbiology</i>, Vol. 13, 
+        of science and society?', <i>Frontiers in Microbiology</i>, Vol. 13, 
         <a href="https://doi.org/10.3389/fmicb.2022.887310">https://doi.org/10.3389/fmicb.2022.887310</a>
     </p>
     <p>
@@ -29,7 +29,7 @@
         Hugouvieux-Cotte-Pattat, N., Jacot-des-Combes, C., Briolay, J., Pritchard, L. (2021) 
         'Proposal for the creation of a new genus Musicola gen. nov., reclassification of 
         Dickeya paradisiaca (Samson et al. 2005) as Musicola paradisiaca comb. nov. and 
-        description of a new species Musicola keenii sp. nov.', <i>International Journal of 
-            Systematic and EVol.utionary Microbiology</i>, Vol. 71, <a href="https://doi.org/10.1099/ijsem.0.005037">https://doi.org/10.1099/ijsem.0.005037</a>
+        description of a new species Musicola keenii sp. nov.', <i>International Journal of Systematic 
+            and Evolutionary Microbiology</i>, Vol. 71, <a href="https://doi.org/10.1099/ijsem.0.005037">https://doi.org/10.1099/ijsem.0.005037</a>
     </p>
 </div>
